--- a/app/service.html
+++ b/app/service.html
@@ -187,9 +187,9 @@
 									<section class="under-section-2-4">
 										<p>Я предусматриваю то, что здесь возможен даже список:</p>
 										<ul>
-											<li>Отступ в 20 px. </li>
-											<li>Обратите внимание на цвет текста. Он не чёрный. </li>
-											<li>На этом закончим. </li>
+											<li><span>Отступ в 20 px. </span></li>
+											<li><span>Обратите внимание на цвет текста. Он не чёрный. </span></li>
+											<li><span>На этом закончим. </span></li>
 										</ul>
 										<p>
 										Ещё немного текста. <a href="#">Ссылка в тексте.</a> Конформизм понимает эриксоновский гипноз. Лидерство самопроизвольно. Толпа, на первый взгляд, 
@@ -198,7 +198,6 @@
 										о персонифицированном характере первичной социализации. Роджерс определял терапию как, роль текстологически аннигилирует 
 										эмпирический интеракционизм. Сновидение, по определению, осознаёт конфликтный психоанализ одинаково по всем направлениям. 
 										Коллективное бессознательное притягивает страх. Аутотренинг, конечно, дает аутизм. Очевидно, что бихевиоризм просветляет гендер.
-
 									</p>
 									</section>
 									
