service owl ended, but need modal gallery

--- a/app/service.html
+++ b/app/service.html
@@ -201,12 +201,72 @@
 										</p>
 										<!-- owl carousel -->
 										<div class="owl-carousel owl-theme">
-											<div class="item"><img src="img/jobs.jpg" alt=""></div>
-											<div class="item"><img src="img/jobs.jpg" alt=""></div>
-											<div class="item"><img src="img/jobs.jpg" alt=""></div>	<div class="item"><img src="img/jobs.jpg" alt=""></div>
-											<div class="item"><img src="img/jobs.jpg" alt=""></div>
-											<div class="item"><img src="img/jobs.jpg" alt=""></div>
-											<div class="item"><img src="img/jobs.jpg" alt=""></div>
+
+											<!-- item -->
+											<div class="item">
+												<div class="view overlay hm-zoom hm-black-strong">
+													<img src="img/jobs.jpg" alt="">
+													<div class="mask flex-center">
+														<p class="white-text"><i class="fa fa-search-plus" aria-hidden="true"></i></p>
+													</div>
+												</div>
+											</div>
+											<!-- item -->
+
+											<!-- item -->
+											<div class="item">
+												<div class="view overlay hm-zoom hm-black-strong">
+													<img src="img/jobs.jpg" alt="">
+													<div class="mask flex-center">
+														<p class="white-text"><i class="fa fa-search-plus" aria-hidden="true"></i></p>
+													</div>
+												</div>
+											</div>
+											<!-- item -->
+
+											<!-- item -->
+											<div class="item">
+												<div class="view overlay hm-zoom hm-black-strong">
+													<img src="img/jobs.jpg" alt="">
+													<div class="mask flex-center">
+														<p class="white-text"><i class="fa fa-search-plus" aria-hidden="true"></i></p>
+													</div>
+												</div>
+											</div>
+											<!-- item -->
+
+											<!-- item -->
+											<div class="item">
+												<div class="view overlay hm-zoom hm-black-strong">
+													<img src="img/jobs.jpg" alt="">
+													<div class="mask flex-center">
+														<p class="white-text"><i class="fa fa-search-plus" aria-hidden="true"></i></p>
+													</div>
+												</div>
+											</div>
+											<!-- item -->
+
+											<!-- item -->
+											<div class="item">
+												<div class="view overlay hm-zoom hm-black-strong">
+													<img src="img/jobs.jpg" alt="">
+													<div class="mask flex-center">
+														<p class="white-text"><i class="fa fa-search-plus" aria-hidden="true"></i></p>
+													</div>
+												</div>
+											</div>
+											<!-- item -->
+
+											<!-- item -->
+											<div class="item">
+												<div class="view overlay hm-zoom hm-black-strong">
+													<img src="img/jobs.jpg" alt="">
+													<div class="mask flex-center">
+														<p class="white-text"><i class="fa fa-search-plus" aria-hidden="true"></i></p>
+													</div>
+												</div>
+											</div>
+											<!-- item -->
 										</div>
 										<!-- end owl carousel -->
 									</section>
