some correction after including MDB plugin

--- a/app/index.html
+++ b/app/index.html
@@ -103,7 +103,7 @@
 						<li><a href="#">Доставка и оплата</a></li>
 						<li><a href="#">Сервис и гарантия</a></li>
 						<li><a href="#">Контакты</a></li>
-						<li><a class="shop-btn" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span class="badge">5</span></a></li>
+						<li><a class="shop-btn" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span class="badge">5</span></li>
 						<li><a class="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
@@ -479,11 +479,11 @@
 															<!-- 2nd row -->
 															<div class="row second-row">
 
-																<div class="col-lg-4">
+																<div class="col-lg-4 col-md-4"">
 																	<p class="first-p">2010-2017© Gadget Access</p>
 																</div>
 
-																<div class="col-lg-4">
+																<div class="col-lg-4 col-md-4">
 																	<ul class="pos-rel">
 																		<li><p class="second-p">Мы <br> в соцсетях:</p></li>
 																		<li><a href=""><img src="img/vk-footer.png" alt=""></a></li>
@@ -493,7 +493,7 @@
 																	</ul>
 																</div>
 
-																<div class="col-lg-4">
+																<div class="col-lg-4 col-md-4">
 																	<div class="input-group">
 																				<input type="text" class="form-control " placeholder="Search for...">
 																				<span class="input-group-btn">
