--- a/app/delivery.html
+++ b/app/delivery.html
@@ -112,104 +112,108 @@
 		<!-- end nav -->
 	</header>
 	<!-- section-1 -->
-	<section class="section-1-contacts">
-		<h3>Контакты</h3>
+	<section class="section-1-delivery">
+		<h3>Доставка и оплата</h3>
+	</section>
+	<!-- end section-1 -->
+	<!-- section-2 -->
+	<section class="section-2-delivery">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<div class="wrapper-adress-blc">
-						<span>Адрес</span>
-						<p>пр-т.Октябрьский 2Б, офис 103 
-							(БЦ "Маяк Плаза")</p>
-							<div class="wrapper-adress">
-								<span>Телефон</span>
-								<a href="tel+76950366516">+7 (695) 036-65-16</a> <b>(Магазин)</b> <br>
-								<a href="tel+76950366516">+7 (3842) 44-64-24</a> <b>(Сервис)</b>
-							</div>
+				<div class="wrapper-section-2-delivery">
+					<div class="wrapper-tab">
+					<!-- tabs control -->
+						<div class="tabs-control">
+							<a class="active" href="">Условия доставки</a>
+							<a  href="">Оплата</a>
+							<a href="">Кредит</a>
 						</div>
+						<!-- end tabs control -->
+
 					</div>
-					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<div class="wrapper-time-blc">
-							<span>Email</span>
-							<a href="mailto:gadgetaccess.42@gmail.com">gadgetaccess.42@gmail.com</a>
-							<div class="wrapper-time">
-								<span>Часы работы</span>
-								<a href="tel+76950366516">Пн-пт: 11:30-20:00</a> <br>
-								<a href="tel+76950366516">Сб-вс: 12:00-20:00</a>
+					<div class="wrapper-section-2-delivery-text">
+						<!-- tabs content -->
+						<div class="tabs-content">
+							<div class="item-delivery tab-1">
+							tab1
+							</div>
+							<div class="item-delivery tab-2">
+							tab2
+							</div>
+							<div class="item-delivery tab-3">
+							tab3
 							</div>
 						</div>
+						<!-- end tabs content -->
 					</div>
 				</div>
+				<div class=""></div>
 			</div>
-		</section>
-		<!-- end section-1 -->
-
-	<!-- section-2 -->
-	<section class="section-2-contacts">
-		<img src="img/bgsec4.jpg" alt="">
+		</div>
+		
 	</section>
 	<!-- end section-2 -->
-		<!-- footer -->
-		<footer>
-			<div class="container">
-				<!-- 1st row -->
-				<div class="row first-row">
+	<!-- footer -->
+	<footer>
+		<div class="container">
+			<!-- 1st row -->
+			<div class="row first-row">
 
-					<div class="col-lg-3 col-md-3 col-sm-12">
-						<div class="logo-wrapper">
-							<img src="img/logo-black.png" alt="">
-						</div>
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<div class="logo-wrapper">
+						<img src="img/logo-black.png" alt="">
 					</div>
-
-					<div class="col-lg-9 col-md-9 col-sm-12">	
-						<ul>
-							<li><a href="">Каталог</a></li>
-							<li><a href="">О компании</a></li>
-							<li><a href="">Доставка и оплата</a></li>
-							<li><a href="">Сервис и гарантия</a></li>
-							<li><a href="">Контакты</a></li>
-							<li><a href="tel+78000000000">8 (800) 000-00-00</a></li>
-						</ul>
-					</div>
-
 				</div>
-				<!-- end 1st row -->
-				<!-- 2nd row -->
-				<div class="row second-row">
 
-					<div class="col-lg-4 col-md-4"">
-						<p class="first-p">2010-2017© Gadget Access</p>
-					</div>
-
-					<div class="col-lg-4 col-md-4">
-						<ul class="pos-rel">
-							<li><p class="second-p">Мы <br> в соцсетях:</p></li>
-							<li><a href=""><img src="img/vk-footer.png" alt=""></a></li>
-							<li><a href=""></a><img src="img/inst-footer.png" alt=""></li>
-							<li><a href=""></a><img src="img/fb-footer.png" alt=""></li>
-
-						</ul>
-					</div>
-
-					<div class="col-lg-4 col-md-4">
-						<div class="input-group">
-							<input type="text" class="form-control " placeholder="Search for...">
-							<span class="input-group-btn">
-								<button class="btn search-btn" type="button">
-									<i class="fa fa-search" aria-hidden="true"></i>
-								</button>
-							</span>
-						</div>
-					</div>
-
+				<div class="col-lg-9 col-md-9 col-sm-12">	
+					<ul>
+						<li><a href="">Каталог</a></li>
+						<li><a href="">О компании</a></li>
+						<li><a href="">Доставка и оплата</a></li>
+						<li><a href="">Сервис и гарантия</a></li>
+						<li><a href="">Контакты</a></li>
+						<li><a href="tel+78000000000">8 (800) 000-00-00</a></li>
+					</ul>
 				</div>
-				<!-- end 2nd row -->
+
 			</div>
-		</footer>
-		<!-- end footer -->
+			<!-- end 1st row -->
+			<!-- 2nd row -->
+			<div class="row second-row">
 
-		<!-- ================== end body ================= -->
-		<link rel="stylesheet" href="css/main.min.css">
-		<script src="js/scripts.min.js"></script>
-	</body>
-	</html>
+				<div class="col-lg-4 col-md-4"">
+					<p class="first-p">2010-2017© Gadget Access</p>
+				</div>
+
+				<div class="col-lg-4 col-md-4">
+					<ul class="pos-rel">
+						<li><p class="second-p">Мы <br> в соцсетях:</p></li>
+						<li><a href=""><img src="img/vk-footer.png" alt=""></a></li>
+						<li><a href=""></a><img src="img/inst-footer.png" alt=""></li>
+						<li><a href=""></a><img src="img/fb-footer.png" alt=""></li>
+
+					</ul>
+				</div>
+
+				<div class="col-lg-4 col-md-4">
+					<div class="input-group">
+						<input type="text" class="form-control " placeholder="Search for...">
+						<span class="input-group-btn">
+							<button class="btn search-btn" type="button">
+								<i class="fa fa-search" aria-hidden="true"></i>
+							</button>
+						</span>
+					</div>
+				</div>
+
+			</div>
+			<!-- end 2nd row -->
+		</div>
+	</footer>
+	<!-- end footer -->
+
+	<!-- ================== end body ================= -->
+	<link rel="stylesheet" href="css/main.min.css">
+	<script src="js/scripts.min.js"></script>
+</body>
+</html>
