end delivery page

--- a/app/delivery.html
+++ b/app/delivery.html
@@ -120,9 +120,9 @@
 	<section class="section-2-delivery">
 		<div class="container">
 			<div class="row">
-				<div class="wrapper-section-2-delivery">
+				<div class="section-2-wrapper">
 					<div class="wrapper-tab">
-					<!-- tabs control -->
+						<!-- tabs control -->
 						<div class="tabs-control">
 							<a class="active" href="">Условия доставки</a>
 							<a  href="">Оплата</a>
@@ -135,85 +135,140 @@
 						<!-- tabs content -->
 						<div class="tabs-content">
 							<div class="item-delivery tab-1">
-							tab1
+								<h3>Покупка в кредит - это просто!</h3>
+								<h4>Я предусматриваю то, что здесь возможен подзаголовок.</h4>
+								<p>Это обычный текст. Он будет таким по всему сайту. Далее будет рыба. Но это неточно. Конформизм понимает эриксоновский гипноз. 
+									Лидерство самопроизвольно. Толпа, на первый взгляд, интегрирует эриксоновский гипноз.Тест, конечно, традиционен. Автоматизм, 
+									в представлении Морено, точно просветляет страх. Эриксоновский гипноз однородно осознаёт ролевой психоз.Анима вызывает 
+									сублимированный автоматизм, и это неудивительно, если речь о персонифицированном характере первичной социализации. Роджерс 
+									определял терапию как, роль текстологически аннигилирует эмпирический интеракционизм. Сновидение, по определению, осознаёт 
+									конфликтный психоанализ одинаково по всем направлениям. Коллективное бессознательное притягивает страх. Аутотренинг, конечно, дает 
+									аутизм. Очевидно, что бихевиоризм просветляет гендерный гендер.</p>
+									<p>Я предусматриваю то, что здесь возможен даже список:</p>
+									<ul>
+										<li><span>Отступ в 20 px. </span></li>
+										<li><span>Обратите внимание на цвет текста. Он не чёрный. </span></li>
+										<li><span>На этом закончим. </span></li>
+									</ul>
+									<p>
+										<blockquote>
+											Мы же не оформили цитату. Почему бы и нет. <br>
+											Цитируйте, это полезно. Но это неточно.
+										</blockquote>
+										<p>
+											Ещё немного текста. <a href="#">Ссылка в тексте.</a> Конформизм понимает эриксоновский гипноз. Лидерство самопроизвольно. Толпа, на первый взгляд, 
+											интегрирует эриксоновский гипноз. Тест, конечно, традиционен. Автоматизм, в представлении Морено, точно просветляет страх. 
+											Эриксоновский гипноз однородно осознаёт ролевой психоз.Анима вызывает сублимированный автоматизм, и это неудивительно, если речь 
+											о персонифицированном характере первичной социализации. Роджерс определял терапию как, роль текстологически аннигилирует 
+											эмпирический интеракционизм. Сновидение, по определению, осознаёт конфликтный психоанализ одинаково по всем направлениям. 
+											Коллективное бессознательное притягивает страх. Аутотренинг, конечно, дает аутизм. Очевидно, что бихевиоризм просветляет гендер.
+										</p>
+										<p>Если понадобится нумерация:</p>
+										<ul class="num">
+											<li><span>Отступ в 20 px. </span></li>
+											<li><span>Обратите внимание на цвет текста. Он не чёрный. </span></li>
+											<li><span>На этом закончим. </span></li>
+										</ul>
+										<p class="important-txt">Важный цветной текст. Здесь крайне полезная информация. Не злоупотребляйте. Повторюсь, не должно быть «висячих» союзов. 
+											Тоже важно: красивое тире — залог успеха. Тире — это не дефис. </p>
+											<h4>Банки, предоставляющие программы кредитования</h4>
+											<div class="row">
+												<div class="col-lg-4 col-md-4 col-sm-4">
+													<div class="img-wrapper-delivery">
+														<img src="img/homecredit.jpg" alt="">
+													</div>
+												</div>
+												<div class="col-lg-4 col-md-4 col-sm-4">
+													<div class="img-wrapper-delivery">
+														<img src="img/krediti-vtb-24.jpg" alt="">
+													</div>
+												</div>
+												<div class="col-lg-4 col-md-4 col-sm-4">
+													<div class="img-wrapper-delivery">
+														<img src="img/krediti-vtb-24.jpg" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+										
+										
+										<div class="item-delivery tab-2">
+											tab2
+										</div>
+										<div class="item-delivery tab-3">
+											tab3
+										</div>
+									</div>
+									<!-- end tabs content -->
+								</div>
 							</div>
-							<div class="item-delivery tab-2">
-							tab2
-							</div>
-							<div class="item-delivery tab-3">
-							tab3
-							</div>
+							<div class=""></div>
 						</div>
-						<!-- end tabs content -->
 					</div>
-				</div>
-				<div class=""></div>
-			</div>
-		</div>
-		
-	</section>
-	<!-- end section-2 -->
-	<!-- footer -->
-	<footer>
-		<div class="container">
-			<!-- 1st row -->
-			<div class="row first-row">
 
-				<div class="col-lg-3 col-md-3 col-sm-12">
-					<div class="logo-wrapper">
-						<img src="img/logo-black.png" alt="">
+				</section>
+				<!-- end section-2 -->
+				<!-- footer -->
+				<footer>
+					<div class="container">
+						<!-- 1st row -->
+						<div class="row first-row">
+
+							<div class="col-lg-3 col-md-3 col-sm-12">
+								<div class="logo-wrapper">
+									<img src="img/logo-black.png" alt="">
+								</div>
+							</div>
+
+							<div class="col-lg-9 col-md-9 col-sm-12">	
+								<ul>
+									<li><a href="">Каталог</a></li>
+									<li><a href="">О компании</a></li>
+									<li><a href="">Доставка и оплата</a></li>
+									<li><a href="">Сервис и гарантия</a></li>
+									<li><a href="">Контакты</a></li>
+									<li><a href="tel+78000000000">8 (800) 000-00-00</a></li>
+								</ul>
+							</div>
+
+						</div>
+						<!-- end 1st row -->
+						<!-- 2nd row -->
+						<div class="row second-row">
+
+							<div class="col-lg-4 col-md-4"">
+								<p class="first-p">2010-2017© Gadget Access</p>
+							</div>
+
+							<div class="col-lg-4 col-md-4">
+								<ul class="pos-rel">
+									<li><p class="second-p">Мы <br> в соцсетях:</p></li>
+									<li><a href=""><img src="img/vk-footer.png" alt=""></a></li>
+									<li><a href=""></a><img src="img/inst-footer.png" alt=""></li>
+									<li><a href=""></a><img src="img/fb-footer.png" alt=""></li>
+
+								</ul>
+							</div>
+
+							<div class="col-lg-4 col-md-4">
+								<div class="input-group">
+									<input type="text" class="form-control " placeholder="Search for...">
+									<span class="input-group-btn">
+										<button class="btn search-btn" type="button">
+											<i class="fa fa-search" aria-hidden="true"></i>
+										</button>
+									</span>
+								</div>
+							</div>
+
+						</div>
+						<!-- end 2nd row -->
 					</div>
-				</div>
+				</footer>
+				<!-- end footer -->
 
-				<div class="col-lg-9 col-md-9 col-sm-12">	
-					<ul>
-						<li><a href="">Каталог</a></li>
-						<li><a href="">О компании</a></li>
-						<li><a href="">Доставка и оплата</a></li>
-						<li><a href="">Сервис и гарантия</a></li>
-						<li><a href="">Контакты</a></li>
-						<li><a href="tel+78000000000">8 (800) 000-00-00</a></li>
-					</ul>
-				</div>
-
-			</div>
-			<!-- end 1st row -->
-			<!-- 2nd row -->
-			<div class="row second-row">
-
-				<div class="col-lg-4 col-md-4"">
-					<p class="first-p">2010-2017© Gadget Access</p>
-				</div>
-
-				<div class="col-lg-4 col-md-4">
-					<ul class="pos-rel">
-						<li><p class="second-p">Мы <br> в соцсетях:</p></li>
-						<li><a href=""><img src="img/vk-footer.png" alt=""></a></li>
-						<li><a href=""></a><img src="img/inst-footer.png" alt=""></li>
-						<li><a href=""></a><img src="img/fb-footer.png" alt=""></li>
-
-					</ul>
-				</div>
-
-				<div class="col-lg-4 col-md-4">
-					<div class="input-group">
-						<input type="text" class="form-control " placeholder="Search for...">
-						<span class="input-group-btn">
-							<button class="btn search-btn" type="button">
-								<i class="fa fa-search" aria-hidden="true"></i>
-							</button>
-						</span>
-					</div>
-				</div>
-
-			</div>
-			<!-- end 2nd row -->
-		</div>
-	</footer>
-	<!-- end footer -->
-
-	<!-- ================== end body ================= -->
-	<link rel="stylesheet" href="css/main.min.css">
-	<script src="js/scripts.min.js"></script>
-</body>
-</html>
+				<!-- ================== end body ================= -->
+				<link rel="stylesheet" href="css/main.min.css">
+				<script src="js/scripts.min.js"></script>
+			</body>
+			</html>
