item good hover and tooltip ended

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -145,8 +145,21 @@
 						<!-- good item catalog -->
 						<div class="col-lg-4 col-md-4">
 							<div class="item-good-catalog">
-								<div class="good-img-blc-catalog">
+								<div class="good-img-blc-catalog view overlay hm-black-strong">
 									<img src="img/catalog-1.png" alt="">
+									<div class="mask flex-center">
+									<p class="white-text">
+										<a class="item-good-btn" href="#" data-toggle="tooltip" title="Просмотр" data-placement="bottom">
+											<i class="fa fa-chevron-right" aria-hidden="true"></i>
+										</a>
+										<a class="item-good-btn" href="#" data-toggle="tooltip" title="В корзину" data-placement="bottom">
+											<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+										</a>
+										<a class="item-good-btn" href="#" data-toggle="tooltip" title="ещё" data-placement="bottom">
+												<i class="fa fa-bars" aria-hidden="true"></i>
+										</a>
+									</p>
+									</div>
 									<div class="pos-abs-to-top">
 										<span class="new-label">NEW</span>
 										<span class="hit-label">ХИТ</span>
@@ -207,7 +220,8 @@
 						<!-- good item catalog -->
 						<div class="col-lg-4 col-md-4">
 							<div class="item-good-catalog">
-								<div class="good-img-blc-catalog">
+
+								<div class="good-img-blc-catalog ">
 									<img src="img/catalog-1.png" alt="">
 									<div class="pos-abs-to-top">
 										<span class="new-label">NEW</span>
