--- a/app/index.html
+++ b/app/index.html
@@ -317,7 +317,7 @@
 								</div>
 								<div class="good-wide-wrapper-action">
 									<span>от 79 900 Руб.</span>
-									<a class="btn" href="">Оформить</a>
+									<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Оформить</a>
 								</div>
 								<div class="good-wide-wrapper-text">
 									<h3>Предзаказ iPhone 8 Plus</h3>
