aside with animation

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -134,7 +134,7 @@
 				<div class="col-lg-3 col-md-3">
 					<div class="aside-mnu">
 						<ul>
-							<li><a class="active" href="#sub-mnu-1" data-toggle="collapse">Apple iPhone <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+							<li><a class="active" href="#sub-mnu-1" data-toggle="collapse">Apple iPhone <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
 									<ul id="sub-mnu-1" class="collapse sub-mnu ">
 										<li>iPnone 7</li>
 										<li>iPnone 8</li>
