--- a/app/catalog.html
+++ b/app/catalog.html
@@ -135,31 +135,31 @@
 					<div class="aside-mnu">
 						<ul>
 							<li><a class="active" href="#sub-mnu-1" data-toggle="collapse">Apple iPhone <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
-									<ul id="sub-mnu-1" class="collapse sub-mnu ">
-										<li>iPnone 7</li>
-										<li>iPnone 8</li>
-										<li>iPnone 9</li>
-										<li>iPnone 10</li>
-										<li>iPnone 11</li>
-									</ul>
+								<ul id="sub-mnu-1" class="collapse sub-mnu ">
+									<li>iPnone 7</li>
+									<li>iPnone 8</li>
+									<li>iPnone 9</li>
+									<li>iPnone 10</li>
+									<li>iPnone 11</li>
+								</ul>
 							</li>
-							<li><a class="" href="#sub-mnu-2" data-toggle="collapse">Apple iPhone <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-									<ul id="sub-mnu-2" class="collapse sub-mnu ">
-										<li>iPnone 7</li>
-										<li>iPnone 8</li>
-										<li>iPnone 9</li>
-										<li>iPnone 10</li>
-										<li>iPnone 11</li>
-									</ul>
+							<li><a class="" href="#sub-mnu-2" data-toggle="collapse">Apple iPhone <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
+								<ul id="sub-mnu-2" class="collapse sub-mnu ">
+									<li>iPnone 7</li>
+									<li>iPnone 8</li>
+									<li>iPnone 9</li>
+									<li>iPnone 10</li>
+									<li>iPnone 11</li>
+								</ul>
 							</li>
-							<li><a class="" href="#sub-mnu-3" data-toggle="collapse">Apple iPhone <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-									<ul id="sub-mnu-3" class="collapse sub-mnu ">
-										<li>iPnone 7</li>
-										<li>iPnone 8</li>
-										<li>iPnone 9</li>
-										<li>iPnone 10</li>
-										<li>iPnone 11</li>
-									</ul>
+							<li><a class="" href="#sub-mnu-3" data-toggle="collapse">Apple iPhone <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
+								<ul id="sub-mnu-3" class="collapse sub-mnu ">
+									<li>iPnone 7</li>
+									<li>iPnone 8</li>
+									<li>iPnone 9</li>
+									<li>iPnone 10</li>
+									<li>iPnone 11</li>
+								</ul>
 							</li>
 							<li><a href="">Apple iPhone <i class="fa fa-chevron-down" aria-hidden="true"></i></a></li>
 							<li><a href="">Apple iPhone <i class="fa fa-chevron-down" aria-hidden="true"></i></a></li>
@@ -172,11 +172,23 @@
 
 				<!-- catalog blc -->
 				<div class="col-lg-9 col-md-9 section-2">
+					<!-- row 0 -->
 					<div class="row">
 						<div class="col-lg-12">
-							ФИЛЬТР-блок
+						<!-- bread-crumbs-blc -->
+							<div class="bread-crumbs-blc">
+								<ul class="breadcrumb">
+									<li><a href="#">Главная</a></li>
+									<li><a href="#">Каталог</a></li>
+									<li><a class="active" href="">iPhone</a></li>
+								</ul>
+							</div>
+						<!-- end bread-crumbs-blc -->
+
 						</div>
 					</div>
+					<!-- end 0 row -->
+					<!-- 1st row -->
 					<div class="row">
 
 						<!-- good item catalog -->
