slider range ended

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -277,16 +277,16 @@
 								<!-- row more filter-1 -->
 								<div class="more-filter-1">
 									<div class="row">
-										<div class="col-lg-4">
-										<p>
-											<input id="amount_1" type="text">
-											<input id="amount_2" type="text">
-											<input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
-										</p>
+										<div class="col-lg-6">
+										<div class="input-group">
+											<input id="amount_1" type="text" name="amount_1" placeholder="Цена от, Р">
+											<input id="amount_2" type="text" name="amount_2" placeholder="До">
 										<div id="slider-range"></div>
 										</div>
 										
-										<div class="col-lg-4">lorem</div>
+										</div>
+										
+										<div class="col-lg-2">lorem</div>
 										<div class="col-lg-4">lorem</div>									
 									</div>
 								</div>
