--- a/app/catalog.html
+++ b/app/catalog.html
@@ -277,16 +277,31 @@
 								<!-- row more filter-1 -->
 								<div class="more-filter-1">
 									<div class="row">
-										<div class="col-lg-6">
-										<div class="input-group">
-											<input id="amount_1" type="text" name="amount_1" placeholder="Цена от, Р">
-											<input id="amount_2" type="text" name="amount_2" placeholder="До">
-										<div id="slider-range"></div>
+										<div class="col-lg-6 col-md-6">
+											<div class="input-group">
+												<input id="amount_1" type="text" name="amount_1" placeholder="Цена от, Р">
+												<input id="amount_2" type="text" name="amount_2" placeholder="До">
+												<div id="slider-range"></div>
+											</div>
+
 										</div>
 										
+										<div class="col-lg-2">
+											<form action="#">
+
+											<input type="radio" id="color1" name="radio-group" checked>
+													<label for="color1"></label>
+
+
+													<input type="radio" id="color2" name="radio-group1">
+													<label for="color2"></label>
+
+
+													<input type="radio" id="color3" name="radio-group2">
+													<label for="color3"></label>
+
+											</form>
 										</div>
-										
-										<div class="col-lg-2">lorem</div>
 										<div class="col-lg-4">lorem</div>									
 									</div>
 								</div>
