more filter 1 ended

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -287,22 +287,32 @@
 										</div>
 										
 										<div class="col-lg-2">
-											<form action="#">
-
-											<input type="radio" id="color1" name="radio-group" checked>
-													<label for="color1"></label>
-
-
-													<input type="radio" id="color2" name="radio-group1">
-													<label for="color2"></label>
-
-
-													<input type="radio" id="color3" name="radio-group2">
-													<label for="color3"></label>
-
-											</form>
+										<!-- color-blc -->
+											<div class="color-blc">
+												<ul>
+													<li><a class="active-color" id="color1" href=""></a></li>
+													<li><a id="color2" href=""></a></li>
+													<li><a id="color3" href=""></a></li>
+												</ul>
+												<ul>
+													<li><a id="color4" href=""></a></li>
+													<li><a id="color5" href=""></a></li>
+													<li><a id="color6" href=""></a></li>
+												</ul>
+												<p>Все цвета</p>
+											</div>
+												<!-- end color-blc -->
 										</div>
-										<div class="col-lg-4">lorem</div>									
+										<div class="col-lg-4">
+											<div class="memory-blc">
+												<a href="">8 гб</a>
+												<a href="">16 гб</a>
+												<a href="">32 гб</a>
+												<a href="">64 гб</a>
+												<a href="">128 гб</a>
+												<a href="">256 гб</a>
+											</div>
+										</div>									
 									</div>
 								</div>
 								<!-- end more filter-1 -->
