first row filter added responsive

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -286,7 +286,7 @@
 
 										</div>
 										
-										<div class="col-lg-2">
+										<div class="col-lg-2 col-md-2">
 										<!-- color-blc -->
 											<div class="color-blc">
 												<ul>
@@ -303,7 +303,7 @@
 											</div>
 												<!-- end color-blc -->
 										</div>
-										<div class="col-lg-4">
+										<div class="col-lg-4 col-md-4">
 											<div class="memory-blc">
 												<a href="">8 гб</a>
 												<a href="">16 гб</a>
