--- a/app/catalog.html
+++ b/app/catalog.html
@@ -314,13 +314,18 @@
 											</div>
 										</div>									
 									</div>
+									<div class="more-filter-2">
 									<div class="row">
 										<div class="drop-down-filter">
 											<div class="drop-down-filter-contorl">
 												<a href="">Цена ПО ВОЗРАСТАНИЮ <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
 												<a href="">скрыть ПАРАМЕТРЫ <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
 											</div>
+											<div class="col-lg-4 col-md-4">
+											<!-- dorp-down-filter-drop -->
 											<div class="drop-down-filter-drop">
+												<span >LTE</span>
+												<i class="fa fa-chevron-down" aria-hidden="true"></i>
 												<select>
 													<option value="volvo">Model A1533/A1453</option>
 													<option value="saab">Saab</option>
@@ -328,8 +333,42 @@
 													<option value="audi">Audi</option>
 												</select>
 											</div>
+											<!-- end dorp-down-filter-drop -->
+											</div>
+
+											<div class="col-lg-4 col-md-4">
+											<!-- dorp-down-filter-drop -->
+											<div class="drop-down-filter-drop">
+												<span >Диагональ</span>
+												<i class="fa fa-chevron-down" aria-hidden="true"></i>
+												<select>
+													<option value="volvo">4 дюйма</option>
+													<option value="saab">Saab</option>
+													<option value="opel">Opel</option>
+													<option value="audi">Audi</option>
+												</select>
+											</div>
+											<!-- end dorp-down-filter-drop -->
+											</div>
+
+											<div class="col-lg-4 col-md-4">
+											<!-- dorp-down-filter-drop -->
+											<div class="drop-down-filter-drop">
+												<span >Количество ядер</span>
+												<i class="fa fa-chevron-down" aria-hidden="true"></i>
+												<select>
+													<option value="volvo">4 ядра процессора</option>
+													<option value="saab">Saab</option>
+													<option value="opel">Opel</option>
+													<option value="audi">Audi</option>
+												</select>
+											</div>
+											<!-- end dorp-down-filter-drop -->
+											</div>
 										</div>
 									</div>
+									</div>
+									
 								</div>
 								<!-- end more filter-1 -->
 							</div>
