catalog filter-2 display toggle added

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -319,8 +319,9 @@
 										<div class="drop-down-filter">
 											<div class="drop-down-filter-contorl">
 												<a href="">Цена ПО ВОЗРАСТАНИЮ <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
-												<a href="">скрыть ПАРАМЕТРЫ <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
+												<a id="showFilter1" href="">скрыть ПАРАМЕТРЫ <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
 											</div>
+											<div class="drop-down-filter-body">
 											<div class="col-lg-4 col-md-4">
 											<!-- dorp-down-filter-drop -->
 											<div class="drop-down-filter-drop">
@@ -365,10 +366,11 @@
 											</div>
 											<!-- end dorp-down-filter-drop -->
 											</div>
+											</div>
 										</div>
 									</div>
 									</div>
-									
+
 								</div>
 								<!-- end more filter-1 -->
 							</div>
