filter checkbox added

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -315,60 +315,68 @@
 										</div>									
 									</div>
 									<div class="more-filter-2">
-									<div class="row">
-										<div class="drop-down-filter">
-											<div class="drop-down-filter-contorl">
-												<a href="">Цена ПО ВОЗРАСТАНИЮ <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
-												<a id="showFilter1" href="">скрыть ПАРАМЕТРЫ <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
-											</div>
-											<div class="drop-down-filter-body">
-											<div class="col-lg-4 col-md-4">
-											<!-- dorp-down-filter-drop -->
-											<div class="drop-down-filter-drop">
-												<span >LTE</span>
-												<i class="fa fa-chevron-down" aria-hidden="true"></i>
-												<select>
-													<option value="volvo">Model A1533/A1453</option>
-													<option value="saab">Saab</option>
-													<option value="opel">Opel</option>
-													<option value="audi">Audi</option>
-												</select>
-											</div>
-											<!-- end dorp-down-filter-drop -->
-											</div>
+										<div class="row">
+											<div class="drop-down-filter">
+												<div class="drop-down-filter-contorl">
+													<a href="">Цена ПО ВОЗРАСТАНИЮ <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
+													<a id="showFilter1" href="">скрыть ПАРАМЕТРЫ <i class="fa fa-chevron-down unrotated" aria-hidden="true"></i></a>
+												</div>
+												<div class="drop-down-filter-body">
+													<div class="col-lg-4 col-md-4">
+														<!-- dorp-down-filter-drop -->
+														<div class="drop-down-filter-drop">
+															<span >LTE</span>
+															<i class="fa fa-chevron-down" aria-hidden="true"></i>
+															<select>
+																<option value="volvo">Model A1533/A1453</option>
+																<option value="saab">Saab</option>
+																<option value="opel">Opel</option>
+																<option value="audi">Audi</option>
+															</select>
+														</div>
+														<!-- end dorp-down-filter-drop -->
+													</div>
 
-											<div class="col-lg-4 col-md-4">
-											<!-- dorp-down-filter-drop -->
-											<div class="drop-down-filter-drop">
-												<span >Диагональ</span>
-												<i class="fa fa-chevron-down" aria-hidden="true"></i>
-												<select>
-													<option value="volvo">4 дюйма</option>
-													<option value="saab">Saab</option>
-													<option value="opel">Opel</option>
-													<option value="audi">Audi</option>
-												</select>
-											</div>
-											<!-- end dorp-down-filter-drop -->
-											</div>
+													<div class="col-lg-4 col-md-4">
+														<!-- dorp-down-filter-drop -->
+														<div class="drop-down-filter-drop">
+															<span >Диагональ</span>
+															<i class="fa fa-chevron-down" aria-hidden="true"></i>
+															<select>
+																<option value="volvo">4 дюйма</option>
+																<option value="saab">Saab</option>
+																<option value="opel">Opel</option>
+																<option value="audi">Audi</option>
+															</select>
+														</div>
+														<!-- end dorp-down-filter-drop -->
+													</div>
 
-											<div class="col-lg-4 col-md-4">
-											<!-- dorp-down-filter-drop -->
-											<div class="drop-down-filter-drop">
-												<span >Количество ядер</span>
-												<i class="fa fa-chevron-down" aria-hidden="true"></i>
-												<select>
-													<option value="volvo">4 ядра процессора</option>
-													<option value="saab">Saab</option>
-													<option value="opel">Opel</option>
-													<option value="audi">Audi</option>
-												</select>
-											</div>
-											<!-- end dorp-down-filter-drop -->
-											</div>
+													<div class="col-lg-4 col-md-4">
+														<!-- dorp-down-filter-drop -->
+														<div class="drop-down-filter-drop">
+															<span >Количество ядер</span>
+															<i class="fa fa-chevron-down" aria-hidden="true"></i>
+															<select>
+																<option value="volvo">4 ядра процессора</option>
+																<option value="saab">Saab</option>
+																<option value="opel">Opel</option>
+																<option value="audi">Audi</option>
+															</select>
+														</div>
+
+														<!-- end dorp-down-filter-drop -->
+													</div>
+
+													<div class="col-lg-12">
+													<div class="check-blc">
+														<input id="check1" type="checkbox" name="check" value="check1">
+														<label for="check1">Touch ID (считывание отпечатка пальца)</label>
+													</div>
+													</div>
+												</div>
 											</div>
 										</div>
-									</div>
 									</div>
 
 								</div>
