added self-made -js gallery

--- a/app/card.html
+++ b/app/card.html
@@ -178,6 +178,33 @@
 						</div>
 					</div>
 					<!-- end row 0 -->
+						<!-- row-card -->
+					<div class="row">
+						<div class="col-lg-12">
+						<div class="row">
+						<div class="card-blc">
+							<div class="col-lg-6">
+								<div class="img-wrapper-card">
+								<img class="max-gallery" src="img/ipone-card-1.png" alt="">
+								</div>
+								<div class="img-min-wrapper-card">
+									<i class="fa fa-chevron-left min-left" aria-hidden="true"></i>
+									<i class="fa fa-chevron-right min-right" aria-hidden="true"></i>
+									<a class="min-gallery" href="#"><img src="img/iphone-card-min-1.png" alt="1"></a>
+									<a class="min-gallery" href="#"><img src="img/iphone-card-min-2.png" alt="2"></a>
+									<a class="min-gallery" href="#"><img src="img/iphone-card-min-3.png" alt="3"></a>
+								</div>
+							</div>
+							<div class="col-lg-6">
+								
+							</div>
+						</div>
+						</div>
+						</div>
+					</div>
+				
+
+					<!-- end row-card -->
 				</div>
 				<!-- end section-2 -->
 				<!--end catalog blc  -->
