card block desktop ended

--- a/app/card.html
+++ b/app/card.html
@@ -185,7 +185,7 @@
 
 							<div class="card-blc">
 								<!-- main-row-card-blc -->
-								<div class="row">
+								<div class="row prl20">
 									<!-- img gallery -->
 									<!-- left side card blc -->
 									<div class="col-lg-6">
@@ -265,7 +265,30 @@
 																				<!-- end memory blc -->
 																			</div>
 																			<!-- end seclet color blc + memory -->
+																		<!-- buy blc -->
+																		<div class="buy-blc-card">
+																			<div class="row">
+
+																			<div class="col-lg-6">
+																			<div class="credit">
+																				<p>Покупка в кредит</p>
+																				<a class="btn-white" href="#"><span class="icon-wallet"></span> Оформить</a>
+																			</div>
+																			</div>
+
+																			<div class="col-lg-6">
+																			<div class="buy-blc">
+																				<p class="old-price">50 999 р</p>
+																				<p class="price">29 999 р <span><i class="fa fa-question" aria-hidden="true"></i></span></p>
+																				<a class="btn" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i> В корзину</a>
+																			</div>
+																			</div>
+
 																		</div>
+																		</div>
+																			<!-- end buy blc -->
+																		</div>
+
 																		<div class="item-card tab-2">
 																			описание
 																		</div>
