card blc added responsive

--- a/app/card.html
+++ b/app/card.html
@@ -188,7 +188,7 @@
 								<div class="row prl20">
 									<!-- img gallery -->
 									<!-- left side card blc -->
-									<div class="col-lg-6">
+									<div class="col-lg-6 col-md-6 col-sm-6">
 										<div class="img-wrapper-card">
 											<img class="max-gallery" src="img/ipone-card-1.png" alt="">
 										</div>
@@ -207,7 +207,7 @@
 									<!-- end left side card blc -->
 									<!-- end img gallery -->
 									<!-- rigt side card blc -->
-									<div class="col-lg-6">
+									<div class="col-lg-6 col-md-6 col-sm-6">
 										<div class="wrapper-tab">
 											<!-- tabs control -->
 											<div class="tabs-control-card">
@@ -260,7 +260,7 @@
 																					<a href="">32 гб</a>
 																					<a href="">64 гб</a>
 																					<a href="">128 гб</a>
-																					<a href="">256 гб</a>
+																					
 																				</div>
 																				<!-- end memory blc -->
 																			</div>
@@ -269,14 +269,14 @@
 																		<div class="buy-blc-card">
 																			<div class="row">
 
-																			<div class="col-lg-6">
+																			<div class="col-lg-6 col-md-6 col-sm-6">
 																			<div class="credit">
 																				<p>Покупка в кредит</p>
 																				<a class="btn-white" href="#"><span class="icon-wallet"></span> Оформить</a>
 																			</div>
 																			</div>
 
-																			<div class="col-lg-6">
+																			<div class="col-lg-6 col-md-6 col-sm-6">
 																			<div class="buy-blc">
 																				<p class="old-price">50 999 р</p>
 																				<p class="price">29 999 р <span><i class="fa fa-question" aria-hidden="true"></i></span></p>
